<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewCourseActivity"
    tools:showIn="@layout/activity_new_course">

    <EditText
        android:id="@+id/et_course_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/course_status"
        android:hint="Enter course status"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:background="#B2EBF2"
        android:text="@string/save_button"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_course_mentor_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toEndOf="@+id/et_course_mentor_email" />

    <EditText
        android:id="@+id/et_course_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/date_format_start"
        android:hint="@string/date_format_start"
        android:inputType="date"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/et_course_end_date"
        app:layout_constraintTop_toBottomOf="@+id/et_course_title" />

    <EditText
        android:id="@+id/et_course_mentor_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:autofillHints="@string/mentor_phone"
        android:hint="@string/mentor_phone"
        android:inputType="phone"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_course_mentor_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="@string/enter_course_title"
        android:hint="@string/enter_course_title"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_course_status"
        app:layout_constraintEnd_toStartOf="@+id/et_course_status"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_course_mentor_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/mentor_email"
        android:hint="@string/mentor_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_course_mentor_name" />

    <EditText
        android:id="@+id/et_course_mentor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/mentor_name"
        android:hint="@string/mentor_name"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/et_course_mentor_phone"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_course_start_date" />

    <EditText
        android:id="@+id/et_course_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/date_format_end"
        android:hint="@string/date_format_end"
        android:inputType="date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_course_start_date"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>