<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewTermActivity"
    tools:showIn="@layout/activity_new_term">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/add_term"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter_term_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termEditor"
            android:layout_gravity="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_term_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_term"
            android:hint="@string/enter_term"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_term_start_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="187dp"
            android:autofillHints="@string/start_date"
            android:hint="@string/start_date"
            android:inputType="date"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_term_end_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="187dp"
            android:hint="@string/end_date"
            android:autofillHints="@string/end_date"
            android:inputType="date"
            android:textSize="18sp" />

        <Button
            android:id="@+id/term_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B2EBF2"
            android:layout_gravity="end"
            android:text="@string/save_button"
            android:textSize="12sp" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:visibility="visible"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/term_save_button"/>

        <TextView
            android:id="@+id/dateInMills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="112dp"
            app:layout_constraintTop_toBottomOf="@+id/term_save_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>