<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermDetail"
    tools:showIn="@layout/activity_term_detail">

    <TextView
        android:id="@+id/tv_term_name"
        android:layout_width="294dp"
        android:layout_height="66dp"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:text="@string/new_term"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_term_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_term_name" />

    <TextView
        android:id="@+id/tv_term_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/end_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_term_start_date" />

    <TextView
        android:id="@+id/term_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01/01/2020"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/description_term_start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/description_term_start_date" />

    <TextView
        android:id="@+id/term_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="06/01/2020"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_term_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/tv_term_end_date"
        app:layout_constraintTop_toBottomOf="@+id/term_start_date"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/courses_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_term_end_date" />

    <ImageButton
        android:id="@+id/edit_term_btn"
        android:layout_width="47dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/edit_term"
        app:layout_constraintStart_toEndOf="@+id/tv_term_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/associated_courses_rv"
        android:layout_width="398dp"
        android:layout_height="393dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:listitem="@layout/course_list_rv"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/delete_term_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_term_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

    <TextView
        android:id="@+id/term_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/term_end_date" />


</androidx.constraintlayout.widget.ConstraintLayout>